--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-
 mongodb:
   image: mongo
   ports:
@@ -8,3 +7,9 @@ sonar:
   image: sonarqube
   ports:
    - "9000:9000"
+
+jenkins:
+  build: jenkins/.
+  ports:
+   - "8080:8080"
+   - "50000:50000"
